@@ -22,7 +22,7 @@ import io.airbyte.protocol.models.AirbyteMessage;
 import io.airbyte.protocol.models.CatalogHelpers;
 import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
 import io.airbyte.protocol.models.Field;
-import io.airbyte.protocol.models.JsonSchemaPrimitive;
+import io.airbyte.protocol.models.JsonSchemaType;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -49,7 +49,7 @@ class BigQuerySourceTest {
               + ". Override by setting setting path with the CREDENTIALS_PATH constant.");
     }
 
-    final String credentialsJsonString = new String(Files.readAllBytes(CREDENTIALS_PATH));
+    final String credentialsJsonString = Files.readString(CREDENTIALS_PATH);
 
     final JsonNode credentialsJson = Jsons.deserialize(credentialsJsonString);
     final String projectId = credentialsJson.get(CONFIG_PROJECT_ID).asText();
@@ -97,9 +97,9 @@ class BigQuerySourceTest {
     return CatalogHelpers.createConfiguredAirbyteCatalog(
         STREAM_NAME,
         config.get(CONFIG_DATASET_ID).asText(),
-        Field.of("id", JsonSchemaPrimitive.NUMBER),
-        Field.of("array_val", JsonSchemaPrimitive.ARRAY),
-        Field.of("object_val", JsonSchemaPrimitive.OBJECT));
+        Field.of("id", JsonSchemaType.NUMBER),
+        Field.of("array_val", JsonSchemaType.ARRAY),
+        Field.of("object_val", JsonSchemaType.OBJECT));
   }
 
 }
