@@ -7,63 +7,96 @@ package io.airbyte.workers.process;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.when;
 
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Maps;
 import io.airbyte.commons.lang.Exceptions;
+import io.airbyte.config.EnvConfigs;
+import io.airbyte.config.ResourceRequirements;
+import io.airbyte.workers.WorkerConfigs;
 import io.airbyte.workers.WorkerException;
-import io.airbyte.workers.WorkerUtils;
 import io.fabric8.kubernetes.client.DefaultKubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClient;
-import io.kubernetes.client.openapi.ApiClient;
-import io.kubernetes.client.util.Config;
 import java.io.IOException;
 import java.net.Inet4Address;
 import java.net.ServerSocket;
 import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import org.apache.commons.lang.RandomStringUtils;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 // requires kube running locally to run. If using Minikube it requires MINIKUBE=true
 // Must have a timeout on this class because it tests child processes that may misbehave; otherwise
 // this can hang forever during failures.
-@Timeout(value = 5,
+@Timeout(value = 6,
          unit = TimeUnit.MINUTES)
 public class KubePodProcessIntegrationTest {
+
+  private static final Logger LOGGER = LoggerFactory.getLogger(KubePodProcessIntegrationTest.class);
+
+  private static final int RANDOM_FILE_LINE_LENGTH = 100;
 
   private static final boolean IS_MINIKUBE = Boolean.parseBoolean(Optional.ofNullable(System.getenv("IS_MINIKUBE")).orElse("false"));
   private static List<Integer> openPorts;
   private static int heartbeatPort;
   private static String heartbeatUrl;
-  private static ApiClient officialClient;
   private static KubernetesClient fabricClient;
   private static KubeProcessFactory processFactory;
+  private static final ResourceRequirements DEFAULT_RESOURCE_REQUIREMENTS = new WorkerConfigs(new EnvConfigs()).getResourceRequirements();
+  private static final String ENV_KEY = "ENV_VAR_1";
+  private static final String ENV_VALUE = "ENV_VALUE_1";
+  private static final Map<String, String> ENV_MAP = ImmutableMap.of(ENV_KEY, ENV_VALUE);
 
   private WorkerHeartbeatServer server;
 
   @BeforeAll
   public static void init() throws Exception {
-    openPorts = new ArrayList<>(getOpenPorts(5));
+    openPorts = new ArrayList<>(getOpenPorts(30)); // todo: should we offer port pairs to prevent deadlock? can create test here with fewer to get
+                                                   // this
 
     heartbeatPort = openPorts.get(0);
     heartbeatUrl = getHost() + ":" + heartbeatPort;
 
-    officialClient = Config.defaultClient();
     fabricClient = new DefaultKubernetesClient();
 
-    processFactory = new KubeProcessFactory("default", officialClient, fabricClient, heartbeatUrl, getHost(),
-        new HashSet<>(openPorts.subList(1, openPorts.size() - 1)));
+    KubePortManagerSingleton.init(new HashSet<>(openPorts.subList(1, openPorts.size() - 1)));
+
+    final WorkerConfigs workerConfigs = spy(new WorkerConfigs(new EnvConfigs()));
+    when(workerConfigs.getEnvMap()).thenReturn(Map.of("ENV_VAR_1", "ENV_VALUE_1"));
+
+    processFactory =
+        new KubeProcessFactory(
+            workerConfigs,
+            "default",
+            fabricClient,
+            heartbeatUrl,
+            getHost(),
+            false);
   }
 
   @BeforeEach
@@ -75,6 +108,43 @@ public class KubePodProcessIntegrationTest {
   @AfterEach
   public void teardown() throws Exception {
     server.stop();
+  }
+
+  /**
+   * In the past we've had some issues with transient / stuck pods. The idea here is to run a few at
+   * once, and check that they are all running in hopes of identifying regressions that introduce
+   * flakiness.
+   */
+  @Test
+  public void testConcurrentRunning() throws Exception {
+    final var totalJobs = 5;
+
+    final var pool = Executors.newFixedThreadPool(totalJobs);
+
+    final var successCount = new AtomicInteger(0);
+    final var failCount = new AtomicInteger(0);
+
+    for (int i = 0; i < totalJobs; i++) {
+      pool.submit(() -> {
+        try {
+          final Process process = getProcess("echo hi; sleep 1; echo hi2");
+          process.waitFor();
+
+          // the pod should be dead and in a good state
+          assertFalse(process.isAlive());
+          assertEquals(0, process.exitValue());
+          successCount.incrementAndGet();
+        } catch (final Exception e) {
+          e.printStackTrace();
+          failCount.incrementAndGet();
+        }
+      });
+    }
+
+    pool.shutdown();
+    pool.awaitTermination(2, TimeUnit.MINUTES);
+
+    assertEquals(totalJobs, successCount.get());
   }
 
   @Test
@@ -91,17 +161,102 @@ public class KubePodProcessIntegrationTest {
   }
 
   @Test
+  public void testLongSuccessfulSpawning() throws Exception {
+    // start a finite process
+    final var availablePortsBefore = KubePortManagerSingleton.getInstance().getNumAvailablePorts();
+    final Process process = getProcess("echo hi; sleep 10; echo hi2");
+    process.waitFor();
+
+    // the pod should be dead and in a good state
+    assertFalse(process.isAlive());
+    assertEquals(availablePortsBefore, KubePortManagerSingleton.getInstance().getNumAvailablePorts());
+    assertEquals(0, process.exitValue());
+  }
+
+  @RepeatedTest(5)
+  public void testPortsReintroducedIntoPoolOnlyOnce() throws Exception {
+    final var availablePortsBefore = KubePortManagerSingleton.getInstance().getNumAvailablePorts();
+
+    // run a finite process
+    final Process process = getProcess("echo hi; sleep 1; echo hi2");
+    process.waitFor();
+
+    // the pod should be dead and in a good state
+    assertFalse(process.isAlive());
+
+    // run a background process to continuously consume available ports
+    final var portsTaken = new ArrayList<Integer>();
+    final var executor = Executors.newSingleThreadExecutor();
+    final var shouldContinueTakingPorts = new AtomicBoolean(true);
+    final var doneTakingPorts = new CountDownLatch(1);
+
+    executor.submit(() -> {
+      while (shouldContinueTakingPorts.get()) {
+        final var portTaken = KubePortManagerSingleton.getInstance().takeImmediately();
+
+        if (portTaken != null) {
+          LOGGER.info("portTaken = " + portTaken);
+          portsTaken.add(portTaken);
+        }
+      }
+
+      doneTakingPorts.countDown();
+    });
+
+    // repeatedly call exitValue (and therefore the close method)
+    for (int i = 0; i < 100; i++) {
+      // if exitValue no longer calls close in the future this test will fail and need to be updated.
+      process.exitValue();
+    }
+
+    assertEquals(0, process.exitValue());
+
+    // wait for the background loop to actually take the ports re-offered by the closure of the process
+    Thread.sleep(1000);
+
+    // tell the thread to stop taking ports
+    shouldContinueTakingPorts.set(false);
+
+    // wait for the thread to actually stop taking ports
+    assertTrue(doneTakingPorts.await(5, TimeUnit.SECONDS));
+
+    // interrupt thread
+    executor.shutdownNow();
+
+    // prior to fixing this race condition, the close method would offer ports every time it was called.
+    // without the race condition, we should have only been able to pull each of the originally
+    // available ports once
+    assertEquals(availablePortsBefore, portsTaken.size());
+
+    // release ports for next tests
+    portsTaken.forEach(KubePortManagerSingleton.getInstance()::offer);
+  }
+
+  @Test
   public void testSuccessfulSpawningWithQuotes() throws Exception {
     // start a finite process
     final var availablePortsBefore = KubePortManagerSingleton.getInstance().getNumAvailablePorts();
     final Process process = getProcess("echo \"h\\\"i\"; sleep 1; echo hi2");
-    final var output = new String(process.getInputStream().readAllBytes());
+    final var output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertEquals("h\"i\nhi2\n", output);
     process.waitFor();
 
     // the pod should be dead and in a good state
     assertFalse(process.isAlive());
     assertEquals(availablePortsBefore, KubePortManagerSingleton.getInstance().getNumAvailablePorts());
+    assertEquals(0, process.exitValue());
+  }
+
+  @Test
+  public void testEnvMapSet() throws Exception {
+    // start a finite process
+    final Process process = getProcess("echo ENV_VAR_1=$ENV_VAR_1");
+    final var output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+    assertEquals("ENV_VAR_1=ENV_VALUE_1\n", output);
+    process.waitFor();
+
+    // the pod should be dead and in a good state
+    assertFalse(process.isAlive());
     assertEquals(0, process.exitValue());
   }
 
@@ -116,6 +271,32 @@ public class KubePodProcessIntegrationTest {
     assertFalse(process.isAlive());
     assertEquals(availablePortsBefore, KubePortManagerSingleton.getInstance().getNumAvailablePorts());
     assertEquals(0, process.exitValue());
+  }
+
+  @Test
+  @Timeout(20)
+  public void testDeletingPodImmediatelyAfterCompletion() throws Exception {
+    // start a process that requests
+    final var availablePortsBefore = KubePortManagerSingleton.getInstance().getNumAvailablePorts();
+    final var uuid = UUID.randomUUID();
+    final Process process = getProcess(Map.of("uuid", uuid.toString()), "sleep 1 && exit 10");
+
+    final var pod = fabricClient.pods().list().getItems().stream()
+        .filter(p -> p.getMetadata() != null && p.getMetadata().getLabels() != null)
+        .filter(p -> p.getMetadata().getLabels().containsKey("uuid") && p.getMetadata().getLabels().get("uuid").equals(uuid.toString()))
+        .collect(Collectors.toList()).get(0);
+    fabricClient.resource(pod).watch(new ExitCodeWatcher(
+        exitCode -> {
+          fabricClient.pods().delete(pod);
+        },
+        exception -> {}));
+
+    process.waitFor();
+
+    // the pod should be dead with the correct error code
+    assertFalse(process.isAlive());
+    assertEquals(availablePortsBefore, KubePortManagerSingleton.getInstance().getNumAvailablePorts());
+    assertEquals(10, process.exitValue());
   }
 
   @Test
@@ -162,10 +343,47 @@ public class KubePodProcessIntegrationTest {
     assertNotEquals(0, process.exitValue());
   }
 
+  @Test
+  public void testExitValueWaitsForMainToTerminate() throws Exception {
+    // start a long running main process
+    final Process process = getProcess("sleep 2; exit 13;");
+
+    // immediately close streams
+    process.getInputStream().close();
+    process.getOutputStream().close();
+
+    // waiting for process
+    process.waitFor();
+
+    // the pod exit code should match the main container exit value
+    assertEquals(13, process.exitValue());
+  }
+
+  @Test
+  public void testCopyLargeFiles() throws Exception {
+    final int numFiles = 1;
+    final int numLinesPerFile = 200000;
+
+    final Map<String, String> files = Maps.newHashMapWithExpectedSize(numFiles);
+    for (int i = 0; i < numFiles; i++) {
+      files.put("file" + i, getRandomFile(numLinesPerFile));
+    }
+
+    final long minimumConfigDirSize = (long) numFiles * numLinesPerFile * RANDOM_FILE_LINE_LENGTH;
+
+    final Process process = getProcess(
+        String.format("CONFIG_DIR_SIZE=$(du -sb /config | awk '{print $1;}'); if [ $CONFIG_DIR_SIZE -ge %s ]; then exit 10; else exit 1; fi;",
+            minimumConfigDirSize),
+        files);
+
+    process.waitFor();
+    assertEquals(10, process.exitValue());
+  }
+
   private static String getRandomFile(final int lines) {
     final var sb = new StringBuilder();
     for (int i = 0; i < lines; i++) {
-      sb.append(RandomStringUtils.randomAlphabetic(100));
+      sb.append(RandomStringUtils.randomAlphabetic(RANDOM_FILE_LINE_LENGTH));
       sb.append("\n");
     }
     return sb.toString();
@@ -179,6 +397,19 @@ public class KubePodProcessIntegrationTest {
         "file2", getRandomFile(100),
         "file3", getRandomFile(1000));
 
+    return getProcess(entrypoint, files);
+  }
+
+  private Process getProcess(final Map<String, String> customLabels, final String entrypoint) throws WorkerException {
+    return getProcess(customLabels, entrypoint, Map.of());
+  }
+
+  private Process getProcess(final String entrypoint, final Map<String, String> files) throws WorkerException {
+    return getProcess(Map.of(), entrypoint, files);
+  }
+
+  private Process getProcess(final Map<String, String> customLabels, final String entrypoint, final Map<String, String> files)
+      throws WorkerException {
     return processFactory.create(
         "some-id",
         0,
@@ -186,7 +417,11 @@ public class KubePodProcessIntegrationTest {
         "busybox:latest",
         false,
         files,
-        entrypoint, WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS, Map.of());
+        entrypoint,
+        DEFAULT_RESOURCE_REQUIREMENTS,
+        customLabels,
+        Collections.emptyMap(),
+        Collections.emptyMap());
   }
 
   private static Set<Integer> getOpenPorts(final int count) {
